# mediatool

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  mediatool.py  mediatool_extract.sh  project_description.md  repository_topology
binary_source/: install.py  setup.cfg
binary_source/config/: config_loader.py  default_config.py
binary_source/docs/: license.txt  manpage.md  overview.txt  support.txt  version.txt
binary_source/function/: get_linux_distribution.py
binary_source/install/: install.sh  install_bash_get_shell
binary_source/lib/: utils.py
binary_source/modul/: logger.py
dev/config/: dev_config.ini
docs/DEVELOPMENT/: architecture.md  dev_setup.md
docs/MANUAL/: cli_help.md
docs/REFERENCE/: binary_structure.md  modules.md
docs/SUPPORT/: support_links.md
docs/wild_collection/: compression.md
documentation/DEVELOPMENT/: build_process.md  dev_setup.md
documentation/MANUAL/: examples.md  manpage.md
documentation/REFERENCE/: dependencies.md
documentation/SUPPORT/: troubleshooting.md
lab/: lab_config.ini  lab_init.sh
