[metadata]
name = mediatool
version = 1.0.0
author = Turukmoorea
author_email = mail@turukmoorea.ch
long_description = file: ./docs/manpage.md
long_description_content_type = text/markdown
url = https://github.com/turukmoorea/mediatool
license = GNU General Public License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU GPL
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.10
install_requires =
    flask>=2.0
    numpy>=1.21
    pandas>=1.3

[options.entry_points]
console_scripts =
    mediatool = mediatool:main

[options.package_data]
* =
    docs/*
    config/*
